# ISEL-SO-2021v

./: .gitignore  CMakeLists.txt
se1/: main.c
se2/: makefile  prog  prog.c  syscalls.h  syscalls.s
se2/trash/: makefile  xclose.c  xclose.s  xgetpid.c  xopen.c  xopen.s  xwrite.c  xwrite.s
se3/ex1/: bmp.c
se3/ex2/: prog.c
se4/include/: list.h  usynch.h  uthread.h
se4/tests/: cyclic_barrier_test.c  event_test.c  makefile  priority_test.c  simpletest.c  state_test.c
se4/uthread/: cyclic_barrier.c  event.c  makefile  uthread.c  waitblock.h
